--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "firebase": "^11.0.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
