--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "xlsx": "^0.18.5"
   },
